syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vrg.rapid.pb";
option java_outer_classname = "Remoting";

package remoting;

service MembershipService {
  rpc receiveLinkUpdateMessage (LinkUpdateMessageWire) returns (Response) {}
  rpc receiveJoinMessage (JoinMessage) returns (JoinResponse) {}
}

message LinkUpdateMessageWire
{
    string sender = 1;
    string linkSrc = 2;
    string linkDst = 3;
    LinkStatus linkStatus = 4;
    int64 configurationId = 5;
}

message JoinMessage
{
   string sender = 1;
   string senderUuid = 2;
}

message JoinResponse
{
   string sender = 1;
   JoinStatusCode statusCode = 2;
   repeated string hosts = 3;
   repeated string identifiers = 4;
}

enum JoinStatusCode {
    HOSTNAME_ALREADY_IN_RING = 0;
    UUID_ALREADY_IN_RING = 1;
    SAFE_TO_JOIN = 2;
};

enum LinkStatus {
    UP = 0;
    DOWN = 1;
};

message Response
{
}
